--- a/src/main/resources/templates/site/discuss-detail.html
+++ b/src/main/resources/templates/site/discuss-detail.html
@@ -150,7 +150,7 @@
                             <!-- 第1条回复 -->
                             <li class="pb-3 pt-3 mb-3 border-bottom" th:each="rvo:${cvo.replys}">
                                 <div>
-                                    <<span th:if="${rvo.target==null}">
+                                    <span th:if="${rvo.target==null}">
 											<b class="text-info" th:text="${rvo.user.username}">寒江雪</b>:&nbsp;&nbsp;
 										</span>
                                     <span th:if="${rvo.target!=null}">
@@ -169,24 +169,31 @@
                                         </li>
                                     </ul>
                                     <div th:id="|huifu-${rvoStat.count}|" class="mt-4 collapse">
-                                        <div>
-                                            <input type="text" class="input-size" placeholder="回复寒江雪"/>
-                                        </div>
-                                        <div class="text-right mt-2">
-                                            <button type="button" class="btn btn-primary btn-sm" onclick="#">&nbsp;&nbsp;回&nbsp;&nbsp;复&nbsp;&nbsp;</button>
-                                        </div>
+                                        <form method="post" th:action="@{|/comment/add/${discussPost.id}|}">
+                                            <div>
+                                                <input type="text" class="input-size" name="content" th:placeholder="|回复${rvo.user.username}|"/>
+                                                <input type="hidden" name="entityType" value="2">
+                                                <input type="hidden" name="entityId" th:value="${cvo.comment.id}">
+                                                <input type="hidden" name="targetId" th:value="${rvo.user.id}">
+                                            </div>
+                                            <div class="text-right mt-2">
+                                                <button type="submit" class="btn btn-primary btn-sm" onclick="#">&nbsp;&nbsp;回&nbsp;&nbsp;复&nbsp;&nbsp;</button>
+                                            </div>
+                                        </form>
                                     </div>
                                 </div>
                             </li>
 
                             <!-- 回复输入框 -->
                             <li class="pb-3 pt-3">
-                                <form method="post" th:action="@{|/comment/add/${post.id}|}">
+                                <form method="post" th:action="@{|/comment/add/${discussPost.id}|}">
                                     <div>
-                                        <input type="text" class="input-size" placeholder="请输入你的观点"/>
+                                        <input type="text" class="input-size" name="content" placeholder="请输入你的观点"/>
+                                        <input type="hidden" name="entityType" value="2">
+                                        <input type="hidden" name="entityId" th:value="${cvo.comment.id}">
                                     </div>
                                     <div class="text-right mt-2">
-                                        <button type="button" class="btn btn-primary btn-sm" onclick="#">&nbsp;&nbsp;回&nbsp;&nbsp;复&nbsp;&nbsp;</button>
+                                        <button type="submit" class="btn btn-primary btn-sm" onclick="#">&nbsp;&nbsp;回&nbsp;&nbsp;复&nbsp;&nbsp;</button>
                                     </div>
                                 </form>
                             </li>
