--- a/src/main/resources/templates/site/discuss-detail.html
+++ b/src/main/resources/templates/site/discuss-detail.html
@@ -70,7 +70,7 @@
         <div class="container">
             <!-- 标题 -->
             <h6 class="mb-4">
-                <img src="http://static.nowcoder.com/images/img/icons/ico-discuss.png"/>
+                    <img src="http://static.nowcoder.com/images/img/icons/ico-discuss.png"/>
                 <span th:utext="${discussPost.title}">备战春招，面试刷题跟他复习，一个月全搞定！</span>
                 <div class="float-right">
                     <button type="button" class="btn btn-danger btn-sm">置顶</button>
@@ -80,7 +80,7 @@
             </h6>
             <!-- 作者 -->
             <div class="media pb-3 border-bottom">
-                <a href="profile.html">
+                <a th:href="@{|/user/profile/${discussPost.userId}|}">
                     <img th:src="${user.headerUrl}" class="align-self-start mr-4 rounded-circle user-header" alt="用户头像">
                 </a>
                 <div class="media-body">
@@ -90,7 +90,7 @@
                         15:32:18</b>
                         <ul class="d-inline float-right">
                             <li class="d-inline ml-2">
-                                <a href="javascript:;" th:onclick="|like(this,1,${discussPost.id});|" class="text-primary">
+                                <a href="javascript:;" th:onclick="|like(this,1,${discussPost.id}, ${discussPost.userId});|" class="text-primary">
                                     <b th:text="${likeStatus==1?'已赞':'赞'}">赞</b> <i th:text="${likeCount}">11</i>
                                 </a>
                             </li>
@@ -126,7 +126,7 @@
             <ul class="list-unstyled mt-4">
                 <!-- 第1条回帖 -->
                 <li class="media pb-3 pt-3 mb-3 border-bottom" th:each="cvo:${comments}">
-                    <a href="profile.html">
+                    <a th:href="@{|/user/profile/${cvo.user.id}|}">
                         <img th:src="${cvo.user.headerUrl}" class="align-self-start mr-4 rounded-circle user-header"
                              alt="用户头像">
                     </a>
@@ -144,7 +144,7 @@
                             <span>发布于 <b th:text="${#dates.format(cvo.comment.createTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</b></span>
                             <ul class="d-inline float-right">
                                 <li class="d-inline ml-2">
-                                    <a href="javascript:;" th:onclick="|like(this,2,${cvo.comment.id});|" class="text-primary">
+                                    <a href="javascript:;" th:onclick="|like(this,2,${cvo.comment.id}, ${cvo.comment.userId});|" class="text-primary">
                                         <b th:text="${cvo.likeStatus==1?'已赞':'赞'}">赞</b>(<i th:text="${cvo.likeCount}">1</i>)
                                     </a>
                                 </li>
@@ -171,7 +171,7 @@
                                     <span th:text="${#dates.format(rvo.reply.createTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</span>
                                     <ul class="d-inline float-right">
                                         <li class="d-inline ml-2">
-                                            <a href="javascript:;" th:onclick="|like(this,2,${rvo.reply.id});|" class="text-primary">
+                                            <a href="javascript:;" th:onclick="|like(this,2,${rvo.reply.id}, ${rvo.reply.userId});|" class="text-primary">
                                                 <b th:text="${rvo.likeStatus==1?'已赞':'赞'}">赞</b>(<i th:text="${rvo.likeCount}">1</i>)
                                             </a>
                                         </li>
